--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "start": "webpack-dev-server --mode=development --open"
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
