--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss": "^7.0.17",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-custom-properties": "^9.0.2",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
