--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
+    "media-query-plugin": "^1.3.1",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss": "^7.0.17",
-    "postcss-extract-media-query": "^1.2.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
